--- a/halal-web/manifest.json
+++ b/halal-web/manifest.json
@@ -14,7 +14,7 @@
       "run_at": "document_start"
     }
   ],
-  "permissions": ["storage", "activeTab", "scripting"],
+  "permissions": ["storage", "activeTab", "scripting", "tabs"],
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
