--- a/halal-web/manifest.json
+++ b/halal-web/manifest.json
@@ -10,24 +10,24 @@
     {
       "matches": ["<all_urls>"],
       "css": ["content.css"],
-      "js": ["jquery-3.6.1.js", "content.js"],
+      "js": ["jquery-3.6.1.js", "helper.js", "content.js" ],
       "run_at": "document_start"
     }
   ],
-  "permissions": ["storage", "activeTab", "scripting", "tabs"],
+  "permissions": ["storage", "activeTab", "scripting", "tabs", "file://*/*", "chrome://*"],
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
-      "16": "/images/get_started16.png",
-      "32": "/images/get_started32.png",
-      "48": "/images/get_started48.png",
-      "128": "/images/get_started128.png"
+      "16": "/images/halal-web-logoo16.png",
+      "32": "/images/halal-web-logoo32.png",
+      "48": "/images/halal-web-logoo48.png",
+      "128": "/images/halal-web-logoo128.png"
     }
   },
   "icons": {
-    "16": "/images/get_started16.png",
-    "32": "/images/get_started32.png",
-    "48": "/images/get_started48.png",
-    "128": "/images/get_started128.png"
+    "16": "/images/halal-web-logoo16.png",
+    "32": "/images/halal-web-logoo32.png",
+    "48": "/images/halal-web-logoo48.png",
+    "128": "/images/halal-web-logoo128.png"
   }
 }
